--- a/src/index.html
+++ b/src/index.html
@@ -46,29 +46,50 @@
               <img src="#" alt="uppertitle-icon" class="main-photo__uppertitle-icon">
             </div>
             <h1 class="main-photo__title">
-              Лучший Способ Найти 
+              Лучший Способ Найти
               <br>
               Ваш Идеальный Дом.
             </h1>
             <button class="main-photo__btn">Узнать больше</button>
           </div>
-        </div>
-      </div>
-      <div class="main-houses">
-        <div class="housename">
-          <div class="housename__number">01</div>
-          <p class="housename__name">Eagle Apartment</p>
-        </div>
-        <div class="housename">
-          <div class="housename__number">02</div>
-          <p class="housename__name">California House</p>
-        </div>
-        <div class="housename">
-          <div class="housename__number">03</div>
-          <p class="housename__name">Flamingos House</p>
+          <div class="main-houses">
+            <div class="housename">
+              <div class="housename__number">01</div>
+              <p class="housename__name">Eagle Apartment</p>
+            </div>
+            <div class="housename">
+              <div class="housename__number">02</div>
+              <p class="housename__name">California House</p>
+            </div>
+            <div class="housename">
+              <div class="housename__number">03</div>
+              <p class="housename__name">Flamingos House</p>
+            </div>
+          </div>
         </div>
       </div>
     </main>
+    <section class="welcome">
+      <div class="welcome__text">
+        <p class="welcome__uppertitle">Добро пожаловать в Findeo</p>
+        <h2 class="welcome__title">Найдите Самые Новые Дома На Продажу, Новости Недвижимости и Данные Рынка Недвижимости<span>.</span>
+        </h2>
+        <div class="welcome__info-text">
+          <p class="welcome__info">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores, architecto nesciunt aliquid.
+          Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus laborum sit accusamus id saepe amet.
+        </p>
+        <p class="welcome__info">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores, architecto nesciunt aliquid.
+          Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus laborum sit accusamus id saepe amet.
+        </p>
+        </div>
+        
+      </div>
+      <div class="welcome__image">
+        <img src="img/flokehyttene/flokehyttene-5.jpg" alt="welcome-img" class="welcome__img">
+      </div>
+    </section>
   </div>
 
 </body>
