--- a/src/index.html
+++ b/src/index.html
@@ -72,26 +72,72 @@
     <section class="welcome">
       <div class="welcome__text">
         <p class="welcome__uppertitle">Добро пожаловать в Findeo</p>
-        <h2 class="welcome__title">Найдите Самые Новые Дома На Продажу, Новости Недвижимости и Данные Рынка Недвижимости<span>.</span>
+        <h2 class="welcome__title">Найдите Самые Новые Дома На Продажу, Новости Недвижимости и Данные Рынка
+          Недвижимости<span>.</span>
         </h2>
         <div class="welcome__info-text">
           <p class="welcome__info">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores, architecto nesciunt aliquid.
-          Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus laborum sit accusamus id saepe amet.
-        </p>
-        <p class="welcome__info">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores, architecto nesciunt aliquid.
-          Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus laborum sit accusamus id saepe amet.
-        </p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem
+            veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores,
+            architecto nesciunt aliquid.
+            Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate
+            asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus
+            laborum sit accusamus id saepe amet.
+          </p>
+          <p class="welcome__info">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem
+            veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores,
+            architecto nesciunt aliquid.
+            Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate
+            asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus
+            laborum sit accusamus id saepe amet.
+          </p>
         </div>
-        
       </div>
       <div class="welcome__image">
         <img src="img/flokehyttene/flokehyttene-5.jpg" alt="welcome-img" class="welcome__img">
       </div>
     </section>
+    <section class="steps">
+      <img src="img/flokehyttene/flokehyttene-10.jpg" alt="steps-img" class="steps__img-1">
+      <img src="img/flokehyttene/flokehyttene-13.jpg" alt="steps-img" class="steps__img-2">
+      <div class="steps__contact">
+        <h2 class="steps__contact-title">
+          Ищете Лучшее Место и Цену? 
+          <br>
+          Вы всего в нескольких шагах <span>.</span>
+        </h2>
+        <p class="steps__contact-subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta voluptas architecto est ut cupiditate unde velit molestias eius, accusamus nisi distinctio numquam consequatur quae explicabo adipisci sequi minima perspiciatis excepturi!
+        Praesentium, sed. Nulla saepe asperiores dolorum, dignissimos dolore odio aliquid, ratione iure nobis neque sed! Culpa maiores cumque nulla sed. Corporis suscipit nesciunt dolorum officia? Illum sed dolore voluptas rem?</p>
+        <button class="steps__contact-btn">Contact Us</button>
+       </div>
+       <div class="steps__steps">
+          <h2 class="steps__steps-title">
+            Посмотрите, как это работает <span>.</span>
+          </h2>
+          <p class="steps__steps-text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ratione quam eligendi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+          </p>
+          <div class="steps__step">
+            <img src="img/home-icon.png" alt="home-icon" class="steps__step-icon">
+            <p class="steps__step-name">
+              01. Выберите категорию
+            </p>
+          </div>
+          <div class="steps__step steps__step-2">
+            <img src="img/home-icon-2.png" alt="home-icon" class="steps__step-icon">
+            <p class="steps__step-name">
+              02. Найдите недвижимость
+            </p>
+          </div>
+          <div class="steps__step steps__step-3">
+            <img src="img/home-icon-3.png" alt="home-icon" class="steps__step-icon">
+            <p class="steps__step-name">
+              03. Получите ключи
+            </p>
+          </div>
+       </div>
+    </section>
   </div>
-
 </body>
-
 </html>
