--- a/src/index.html
+++ b/src/index.html
@@ -41,16 +41,21 @@
           <img src="img/flokehyttene/flokehyttene-1.jpg" alt="main-photo" class="main-photo__img">
           <div class="main-photo__text">
             <div class="main-photo__uppertitle">
-              <p class="main-photo__uppertitle-text">Получите все необходимое, чтобы выбрать подходящего агента...
+              <p class="main-photo__uppertitle-text">Получите все необходимое, чтобы выбрать подходящего агента
               </p>
-              <img src="#" alt="uppertitle-icon" class="main-photo__uppertitle-icon">
+              <img src="img/go.png" alt="uppertitle-icon" class="main-photo__uppertitle-icon">
             </div>
             <h1 class="main-photo__title">
               Лучший Способ Найти
               <br>
-              Ваш Идеальный Дом.
+              Ваш Идеальный Дом <span class="yellow-color">.</span>
             </h1>
-            <button class="main-photo__btn">Узнать больше</button>
+            <button class="anim-btn">
+              Узнать больше
+              <svg class="anim-btn__arrow">
+                <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+              </svg>
+            </button>
           </div>
           <div class="main-houses">
             <div class="housename">
@@ -72,25 +77,22 @@
     <section class="welcome">
       <div class="welcome__text">
         <p class="welcome__uppertitle">Добро пожаловать в Findeo</p>
-        <h2 class="welcome__title">Найдите Самые Новые Дома На Продажу, Новости Недвижимости и Данные Рынка
-          Недвижимости<span>.</span>
+        <h2 class="welcome__title">Найдите самые новые Дома на продажу, Новости недвижимости и Данные рынка
+          недвижимости <span class="yellow-color">.</span>
         </h2>
         <div class="welcome__info-text">
           <p class="welcome__info">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem
-            veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores,
-            architecto nesciunt aliquid.
-            Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate
-            asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus
-            laborum sit accusamus id saepe amet.
+            Мы - агентство недвижимости-бутик, которое решительно выступает за создание ценности в нашем бизнесе. Наш
+            акцент на клиентоориентированном подходе и послепродажном обслуживании позволил нам завоевать долгосрочные
+            отношения с нашими клиентами. Вкупе с удовлетворительными результатами, это принесло нам множество отзывов
+            от довольных клиентов. В Real Estate мы понимаем важность того, чтобы быть надежным агентом по недвижимости,
+            и поэтому уделяем 110% всех наших встреч. Каждый клиент Real Estate - особенный, и мы серьезно относимся к
+            каждому из них.
           </p>
           <p class="welcome__info">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione quas voluptatem excepturi at quidem
-            veritatis fugit perspiciatis? Maiores autem delectus veniam, porro dolor esse sequi dignissimos asperiores,
-            architecto nesciunt aliquid.
-            Assumenda soluta numquam omnis! Explicabo rem, inventore dignissimos ipsa quaerat omnis cupiditate
-            asperiores consequatur saepe, perferendis adipisci quidem hic esse corrupti? At incidunt necessitatibus
-            laborum sit accusamus id saepe amet.
+            Существует множество постоянно меняющихся правил, касающихся рынка недвижимости. Имея степень в области
+            недвижимости и многолетний опыт работы в отрасли, мы уверенно проводим нашего клиента на каждом этапе и
+            гарантируем беспроблемный процесс покупки и продажи.
           </p>
         </div>
       </div>
@@ -103,41 +105,248 @@
       <img src="img/flokehyttene/flokehyttene-13.jpg" alt="steps-img" class="steps__img-2">
       <div class="steps__contact">
         <h2 class="steps__contact-title">
-          Ищете Лучшее Место и Цену? 
+          Ищете Лучшее Место и Цену?
           <br>
           Вы всего в нескольких шагах <span>.</span>
         </h2>
-        <p class="steps__contact-subtitle">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta voluptas architecto est ut cupiditate unde velit molestias eius, accusamus nisi distinctio numquam consequatur quae explicabo adipisci sequi minima perspiciatis excepturi!
-        Praesentium, sed. Nulla saepe asperiores dolorum, dignissimos dolore odio aliquid, ratione iure nobis neque sed! Culpa maiores cumque nulla sed. Corporis suscipit nesciunt dolorum officia? Illum sed dolore voluptas rem?</p>
-        <button class="steps__contact-btn">Contact Us</button>
-       </div>
-       <div class="steps__steps">
-          <h2 class="steps__steps-title">
-            Посмотрите, как это работает <span>.</span>
-          </h2>
-          <p class="steps__steps-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda ratione quam eligendi. Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+        <p class="steps__contact-subtitle">Честная и профессиональная компания по недвижимости, которая стремится к
+          достоинству недвижимости.
+          Real Estate определяется как интегрированная концепция и концентрация нескольких услуг в одном месте.
+          Здесь мы имеем дело со всей бюрократией до самого дела. Мы стремимся к советам экспертов, располагаем рядом
+          услуг в сфере недвижимости и стратегических партнеров, которые помогут обеспечить весь процесс и удовлетворить
+          ваши потребности.</p>
+        <button class="yellow-btn">Связаться с нами</button>
+      </div>
+      <div class="steps__steps">
+        <h2 class="steps__steps-title">
+          Посмотрите, как это работает <span>.</span>
+        </h2>
+        <p class="steps__steps-text">
+          Помимо поиска вашего идеального дома, мы просто и сразу решим все формальности, которые требуются при выборе
+          дома.
+        </p>
+        <div class="steps__step">
+          <img src="img/home-icon.png" alt="home-icon" class="steps__step-icon">
+          <p class="steps__step-name">
+            01. Выберите категорию
           </p>
-          <div class="steps__step">
-            <img src="img/home-icon.png" alt="home-icon" class="steps__step-icon">
-            <p class="steps__step-name">
-              01. Выберите категорию
-            </p>
-          </div>
-          <div class="steps__step steps__step-2">
-            <img src="img/home-icon-2.png" alt="home-icon" class="steps__step-icon">
-            <p class="steps__step-name">
-              02. Найдите недвижимость
-            </p>
-          </div>
-          <div class="steps__step steps__step-3">
-            <img src="img/home-icon-3.png" alt="home-icon" class="steps__step-icon">
-            <p class="steps__step-name">
-              03. Получите ключи
-            </p>
-          </div>
-       </div>
+        </div>
+        <div class="steps__step steps__step-2">
+          <img src="img/home-icon-2.png" alt="home-icon" class="steps__step-icon">
+          <p class="steps__step-name">
+            02. Найдите недвижимость
+          </p>
+        </div>
+        <div class="steps__step steps__step-3">
+          <img src="img/home-icon-3.png" alt="home-icon" class="steps__step-icon">
+          <p class="steps__step-name">
+            03. Получите ключи
+          </p>
+        </div>
+      </div>
     </section>
+    <section class="agent">
+      <div class="agent__info">
+        <h2 class="agent__title">
+          Получите все необходимое, чтобы выбрать вашего агента <span class="yellow-color">.</span>
+        </h2>
+        <p class="agent__subtitle">
+          Наша работа – это всегда оперативная оценка состояния рынка, владение актуальными данными, нюансами,
+          достоинствами и
+          недостатками предлагаемых объектов, выбор самого оптимального решения.
+        </p>
+        <div class="agent__video">
+          <div class="agent__video-btn">
+            <div class="agent__video-triangle"></div>
+          </div>
+          <p class="agent__video-text">Посмотреть видео</p>
+        </div>
+      </div>
+      <div class="agent__image-1">
+        <img src="img/writers/writers-8.jpg" alt="agent-img" class="agent__img-1">
+        <p class="agent__image-text">
+          <span class="yellow-color">01</span> - Пространство не ограничено
+        </p>
+      </div>
+      <div class="agent__image-2">
+        <img src="img/zieglers/zieglers-11.jpg" alt="agent-img" class="agent__img-2">
+        <p class="agent__image-text">
+          <span class="yellow-color">02</span> - Жизнь со светом
+        </p>
+      </div>
+    </section>
+    <section class="invest">
+      <h2 class="invest__title">Мы упрощаем инвестирование в недвижимость <span class="yellow-color">.</span>
+      </h2>
+      <p class="invest__info">
+        В одном пространстве вы можете: продавать, инвестировать и сдавать в аренду свою собственность, находить
+        кредитные и страховые решения, запрашивать энергетическую сертификацию, воду, электричество, телефон, телевизор,
+        Интернет.
+      </p>
+      <button class="yellow-btn">
+        Начать
+      </button>
+    </section>
+    <section class="process">
+      <img src="img/baywindow/baywindow-4.jpg" alt="process-img" class="process__img-1">
+      <img src="img/flokehyttene/flokehyttene-9.jpg" alt="process-img" class="process__img-2">
+      <div class="process__info process__info-top">
+        <h2 class="process__info-title">
+          Простой Процесс Поиска Недвижимости <span class="yellow-color">.</span>
+        </h2>
+        <p class="process__info-text">
+          Мы стремимся к честному и открытому бизнесу, налаживанию долгосрочных партнерских и дружеских отношений,
+          стараемся получить наилучший результат проделанной работы, а наши покупатели могут контролировать оформление
+          сделки купли-продажи на каждом этапе.
+        </p>
+        <button class="anim-btn anim-btn--process">
+          Узнать больше
+          <svg class="anim-btn__arrow">
+            <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="process__info-black">
+        <div class="process__info process__info-bottom">
+          <h2 class="process__info-title">
+            Получите все, что Вам нужно <span class="yellow-color">.</span>
+          </h2>
+          <p class="process__info-text">
+            Мы знаем цену времени и понимаем, что Вы не готовы тратить его на длительные поиски подходящего варианта
+            частной собственности, поэтому в максимально короткие сроки предоставим Вам лучший выбор жилых и
+            коммерческих помещений.
+          </p>
+          <button class="anim-btn">
+            Узнать больше
+            <svg class="anim-btn__arrow">
+              <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </section>
+    <section class="clients">
+      <h2 class="clients__title">
+        Нам доверяют лучшие мировые компании <span class="yellow-color">.</span>
+      </h2>
+      <div class="clients__clients">
+        <img src="img/clients/clients-1.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-2.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-3.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-4.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-5.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-6.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-7.png" alt="client-img" class="client__img">
+        <img src="img/clients/clients-8.png" alt="client-img" class="client__img">
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer__images">
+        <div class="footer__top-image">
+          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        </div>
+        <div class="footer__top-image">
+          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        </div>
+        <div class="footer__top-image">
+          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        </div>
+        <div class="footer__top-image">
+          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        </div>
+        <div class="footer__top-image">
+          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        </div>
+        <div class="footer__top-image">
+          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        </div>
+      </div>
+      <div class="footer__subscr">
+        <div class="footer__subscr-text">
+          <p class="footer__subscr-uppertitle">Подписка на новости</p>
+          <h3 class="footer__subscr-title">Не нашли город, который искали? Предложите его нам!</h3>
+        </div>
+        <form action="#" class="footer__subscr-form">
+          <input type="text" class="footer__subscr-input" placeholder="Введите Ваш Email-адрес">
+          <button class="footer__subscr-btn">
+            <svg class="footer__subscr-arrow">
+              <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+      <div class="footer__divide"></div>
+      <div class="footer__bottom">
+        <nav class="footer__links">
+          <h3 class="footer__links-title">Меню</h3>
+          <ul class="footer__links-nav">
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Главная</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Лучшие места</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Направления</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Ресурсы</a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer__links">
+          <h3 class="footer__links-title">Соц. сети</h3>
+          <ul class="footer__links-nav">
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Facebook</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Twitter</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">G-mail</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Skype</a>
+            </li>
+            <li class="footer__links-name">
+              <a href="#" class="footer__links-link">Printerest</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="footer__contacts">
+          <h3 class="footer__contacts-title">Контакты</h3>
+          <div class="footer__contacts-name">
+            <svg class="footer__icon">
+              <use xlink:href="img/icons/icons.svg#phone-call"></use>
+            </svg>
+            <a href="tel:0123456789" class="footer__contacts-link">0123-456-789</a>
+          </div>
+          <div class="footer__contacts-name">
+            <svg class="footer__icon">
+              <use xlink:href="img/icons/icons.svg#email"></use>
+            </svg>
+            <a href="mailto:findeo@gmail.com" class="footer__contacts-link">findeo@gmail.com</a>
+          </div>
+          <div class="footer__contacts-name">
+            <svg class="footer__icon">
+              <use xlink:href="img/icons/icons.svg#place"></use>
+            </svg>
+            <a href="#" class="footer__contacts-link">774 NE St Miami, FL 33879</a>
+          </div>
+        </div>
+        <div class="footer__info">
+          <div class="footer__logo">
+            <img src="img/logo.png" alt="logo" class="footer__logo-img">
+          </div>
+          <p class="footer__info-text">С нами Вы сможете сделать правильный выбор с максимальной инвестиционной прибылью, будь то приобретение роскошного особняка, виллы, квартиры в жилом комплексе или помещения для ведения бизнеса.</p>
+        </div>
+      </div>
+      <p class="footer__copyright">@Copyright</p>
+    </footer>
   </div>
+
+  <script src="js/script.js"></script>
 </body>
+
 </html>
