--- a/src/img/icons/stack/sprite.stack.html
+++ b/src/img/icons/stack/sprite.stack.html
@@ -20,6 +20,7 @@ They might well be outsourced to an external stylesheet of course.
 	.svg-email-dims { width: 512px; height: 512px; }
 	.svg-phone-call-dims { width: 513.64px; height: 513.64px; }
 	.svg-place-dims { width: 513.597px; height: 513.597px; }
+	.svg-right-arrow-dims { width: 512px; height: 512px; }
 </style>
 
 <!--
@@ -77,6 +78,15 @@ selector is used to show the very shape that is referenced by the fragment ident
 					</div>
 					<h2>place</h2>
 				</li>
+				<li title="right-arrow">
+					<div class="icon-box">
+						
+						<!-- right-arrow -->
+						<img src="../icons.svg#right-arrow" class="svg-right-arrow-dims" alt="right-arrow"/>
+						
+					</div>
+					<h2>right-arrow</h2>
+				</li>
 			</ul>
 
 <!--
@@ -85,7 +95,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
 		</section>
 		<footer>
-			<p>Generated at Fri, 12 Mar 2021 16:13:16 GMT by <a href="https://github.com/jkphl/svg-sprite" target="_blank">svg-sprite</a>.</p>
+			<p>Generated at Sat, 13 Mar 2021 08:53:03 GMT by <a href="https://github.com/jkphl/svg-sprite" target="_blank">svg-sprite</a>.</p>
 		</footer>
 	</body>
 </html>
