--- a/src/index.html
+++ b/src/index.html
@@ -241,25 +241,37 @@
       </div>
     </section>
     <footer class="footer">
+      <div class="footer__images-prev">
+        <svg class="footer__arrow">
+          <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+        </svg>
+      </div>
       <div class="footer__images">
-        <div class="footer__top-image">
-          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+        <div class="footer__images-wrapper">
+          <div class="footer__top-image">
+            <img src="img/writers/writers-1.jpg" alt="footer-img" class="footer__top-img">
+          </div>
+          <div class="footer__top-image">
+            <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
+          </div>
+          <div class="footer__top-image">
+            <img src="img/zieglers/zieglers-1.jpg" alt="footer-img" class="footer__top-img">
+          </div>
+          <div class="footer__top-image">
+            <img src="img/baywindow/baywindow-1.jpg" alt="footer-img" class="footer__top-img">
+          </div>
+          <div class="footer__top-image">
+            <img src="img/flokehyttene/flokehyttene-3.jpg" alt="footer-img" class="footer__top-img">
+          </div>
+          <div class="footer__top-image">
+            <img src="img/zieglers/zieglers-6.jpg" alt="footer-img" class="footer__top-img">
+          </div>
         </div>
-        <div class="footer__top-image">
-          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
-        </div>
-        <div class="footer__top-image">
-          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
-        </div>
-        <div class="footer__top-image">
-          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
-        </div>
-        <div class="footer__top-image">
-          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
-        </div>
-        <div class="footer__top-image">
-          <img src="img/flokehyttene/flokehyttene-7.jpg" alt="footer-img" class="footer__top-img">
-        </div>
+      </div>
+      <div class="footer__images-next">
+        <svg class="footer__arrow">
+          <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+        </svg>
       </div>
       <div class="footer__subscr">
         <div class="footer__subscr-text">
@@ -267,7 +279,7 @@
           <h3 class="footer__subscr-title">Не нашли город, который искали? Предложите его нам!</h3>
         </div>
         <form action="#" class="footer__subscr-form">
-          <input type="text" class="footer__subscr-input" placeholder="Введите Ваш Email-адрес">
+          <input type="text" class="footer__subscr-input" placeholder="Введите Ваш Email-адрес" required>
           <button class="footer__subscr-btn">
             <svg class="footer__subscr-arrow">
               <use xlink:href="img/icons/icons.svg#right-arrow"></use>
@@ -332,7 +344,7 @@
             <svg class="footer__icon">
               <use xlink:href="img/icons/icons.svg#place"></use>
             </svg>
-            <a href="#" class="footer__contacts-link">774 NE St Miami, FL 33879</a>
+            <a href="https://goo.gl/maps/on4VoWHbMnF3hiNm6" class="footer__contacts-link" target="_blank">774 NE St Miami, FL 33879 </a>
           </div>
         </div>
         <div class="footer__info">
@@ -342,10 +354,9 @@
           <p class="footer__info-text">С нами Вы сможете сделать правильный выбор с максимальной инвестиционной прибылью, будь то приобретение роскошного особняка, виллы, квартиры в жилом комплексе или помещения для ведения бизнеса.</p>
         </div>
       </div>
-      <p class="footer__copyright">@Copyright</p>
+      <p class="footer__copyright">@ Copyright</p>
     </footer>
   </div>
-
   <script src="js/script.js"></script>
 </body>
 
