--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,11 @@
             <img src="img/logo.png" alt="logo" class="logo">
           </a>
           <nav class="header__nav">
-            <a href="#" class="header__link">Главная</a>
-            <a href="#" class="header__link">О нас</a>
-            <a href="#" class="header__link">Как это работает</a>
-            <a href="#" class="header__link">Детали</a>
-            <a href="#" class="header__link">Контакты</a>
+            <a href="index.html" class="header__link">Главная</a>
+            <a href="#" class="header__anchor-link">О нас</a>
+            <a href="#" class="header__anchor-link">Как это работает</a>
+            <a href="#" class="header__anchor-link">Детали</a>
+            <a href="#" class="header__anchor-link">Контакты</a>
           </nav>
           <div class="header__lang">Язык (RU)</div>
         </header>
@@ -34,11 +34,14 @@
           <a href="mailto:findeo@gmail.com" class="header__links-email">findeo@gmail.com</a>
           <a href="tel:+08096843245789" class="header__links-phone">(+080) 9684 32 45 789</a>
         </div>
-        <div class="header__scroll-down">Scroll Down</div>
+        <a href="#footer" class="header__scroll-down">В конец</a>
       </div>
       <div class="main-window">
         <div class="main-photo">
-          <img src="img/flokehyttene/flokehyttene-1.jpg" alt="main-photo" class="main-photo__img">
+          <img src="img/zieglers/zieglers-8.jpg" alt="main-photo-home" class="main-photo__home">
+          <img src="img/flokehyttene/flokehyttene-2.jpg" alt="main-photo" class="main-photo__img">
+          <img src="img/baywindow/baywindow-2.jpg" alt="main-photo" class="main-photo__img">
+          <img src="img/zieglers/zieglers-6.jpg" alt="main-photo" class="main-photo__img">
           <div class="main-photo__text">
             <div class="main-photo__uppertitle">
               <p class="main-photo__uppertitle-text">Получите все необходимое, чтобы выбрать подходящего агента
@@ -50,31 +53,99 @@
               <br>
               Ваш Идеальный Дом <span class="yellow-color">.</span>
             </h1>
-            <button class="anim-btn">
+            <a href="#welcome" class="anim-btn">
               Узнать больше
               <svg class="anim-btn__arrow">
                 <use xlink:href="img/icons/icons.svg#right-arrow"></use>
               </svg>
-            </button>
+            </a>
+          </div>
+          <div class="home__text">
+            <h2 class="home__text-title">Flokehyttene Cabins</h2>
+            <p class="home__text-place">
+              Архитекторы: Holon Arkitektur
+              <br>
+              Площадь: 239 m2
+              <br>
+              Год: 2020
+              <br>
+              Страна: Норвегия
+            </p>
+            <p class="home__text-info">
+              Расположенный на дальнем конце мыса в Свейо, в 30 минутах езды от Хаугесунда, где бескрайнее небо встречается с величественным морем, вы можете найти маяк Риварден. Именно с этого места Флоке Вильгердссон, или Равнафлок, в 868 году отплыл первым человеком, поселившимся на безымянном острове, который он назвал Исландией. Более тысячи лет спустя пять кают «Флокене» стоят наготове в морском ущелье Свейо.
+            </p>
+            <a href="#" class="anim-btn">
+              Узнать больше
+              <svg class="anim-btn__arrow">
+                <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+              </svg>
+            </a>
+          </div>
+          <div class="home__text">
+            <h2 class="home__text-title">Bay Window House</h2>
+            <p class="home__text-place">
+              Архитекторы: Atelier Oslo
+              <br>
+              Площадь: 600 m2
+              <br>
+              Год: 2020
+              <br>
+              Страна: Норвегия
+            </p>
+            <p class="home__text-info">
+              Город Мушёэн расположен в долине в устье реки Вефсн, недалеко от Лофотенских островов и представляет собой незамерзающую и безопасную гавань. Сегодня в городе преобладают жилые кварталы отдельно стоящих домов, построенных по строгой сетке. В доме «Эркер» четыре квартиры, предназначенные для людей, которые хотят заменить свой частный дом квартирой в пользу более простой жизни. Поэтому мы стремились создать проект с квартирами, которые обладают многими качествами, присущими односемейному дому.
+            </p>
+            <a href="#" class="anim-btn">
+              Узнать больше
+              <svg class="anim-btn__arrow">
+                <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+              </svg>
+            </a>
+          </div>
+          <div class="home__text">
+            <h2 class="home__text-title">Bay Window House</h2>
+            <p class="home__text-place">
+              Архитекторы: Rever & Drage Architects
+              <br>
+              Площадь: 152 m2
+              <br>
+              Год: 2020
+              <br>
+              Страна: Норвегия
+            </p>
+            <p class="home__text-info">
+              Этот дом был построен на небольшом крутом участке. В тонком здании также есть множество комнат, так что при необходимости семья из пяти человек может разместиться. На неизолированной территории первого этажа находится парковка и подъезд, а также складские помещения и технические помещения. Чтобы сделать это место приятным на открытом воздухе, но защищенным от непогоды, дневной свет проникает через щели вдоль западного и восточного фасадов здания. Во внутренней части первого этажа открывается пятиметровое подсобное помещение для игр на батуте и с мячом.
+            </p>
+            <a href="#" class="anim-btn">
+              Узнать больше
+              <svg class="anim-btn__arrow">
+                <use xlink:href="img/icons/icons.svg#right-arrow"></use>
+              </svg>
+            </a>
           </div>
           <div class="main-houses">
+            <div class="main-houses__home">
+              <svg class="main-houses__icon">
+                <use xlink:href="img/icons/icons.svg#home"></use>
+              </svg>
+            </div>
             <div class="housename">
               <div class="housename__number">01</div>
-              <p class="housename__name">Eagle Apartment</p>
+              <p class="housename__name">Flokehyttene Cabins</p>
             </div>
             <div class="housename">
               <div class="housename__number">02</div>
-              <p class="housename__name">California House</p>
+              <p class="housename__name">Bay Window House</p>
             </div>
             <div class="housename">
               <div class="housename__number">03</div>
-              <p class="housename__name">Flamingos House</p>
+              <p class="housename__name">Zieglers Nest</p>
             </div>
           </div>
         </div>
       </div>
     </main>
-    <section class="welcome">
+    <section id="welcome" class="welcome">
       <div class="welcome__text">
         <p class="welcome__uppertitle">Добро пожаловать в Findeo</p>
         <h2 class="welcome__title">Найдите самые новые Дома на продажу, Новости недвижимости и Данные рынка
@@ -240,7 +311,7 @@
         <img src="img/clients/clients-8.png" alt="client-img" class="client__img">
       </div>
     </section>
-    <footer class="footer">
+    <footer id="footer" class="footer">
       <div class="footer__images-prev">
         <svg class="footer__arrow">
           <use xlink:href="img/icons/icons.svg#right-arrow"></use>
